codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__unified_exec_waiting_multiple_empty_active.snap
---
source: tui/src/chatwidget/tests.rs
expression: active_blob(&chat)
---
↳ Waiting for background terminal · just fix
