codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__usage_command_menu.snap
---
source: tui/src/chatwidget/tests/usage.rs
expression: "render_bottom_popup(&chat, 80)"
---
  Usage
  View account usage or redeem an earned reset.


› 1. View analytics            Browse account usage and activity.
  2. Redeem usage limit reset  You have 2 usage limit resets available.

  enter select · esc back
