codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__usage_command_with_invalid_view_reports_usage.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
expression: rendered
---
■ Usage: /usage [daily|weekly|cumulative]
