codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__usage_command_workspace_menu.snap
---
source: tui/src/chatwidget/tests/usage.rs
expression: "render_bottom_popup(&chat, 80)"
---
  Usage
  View account usage.

› 1. Token activity  View recent account token usage.

  Press enter to confirm or esc to go back
