codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__usage_error_wraps_long_backend_message.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: rendered
---
/usage

╭────────────────────────────────────────────────────────╮
│ Usage by token share                                   │
│ Percent of consumed tokens in this selected range      │
│                                                        │
│  Failed to load usage: sqlite state database could not │
│  be opened because the configured path is unavailable  │
╰────────────────────────────────────────────────────────╯
